<resources>
    <string name="app_name">兵兵驿站</string>
    <string name="title_select">兵兵驿站</string>
    <string name="main_tab_first_page">首页</string>
    <string name="main_tab_first_order">订单</string>
    <string name="main_tab_first_data">数据</string>
    <string name="main_tab_first_my">我的</string>

    <string name="durban_title_crop">图片裁剪</string>
    <string name="durban_menu_crop">OK</string>

    <string name="durban_controller_title_rotation">Rotation</string>
    <string name="durban_controller_title_scale">Scale</string>

    <string name="touch_to_focus">触摸屏幕对焦</string>
    <string name="crop_fail">裁剪失败</string>

    <string name="timepicker_year">年</string>
    <string name="timepicker_month">月</string>
    <string name="timepicker_day">日</string>
    <string name="timepicker_hour">时</string>
    <string name="timepicker_min">分</string>
    <string name="timepicker_title">选择时间</string>
    <string name="timepicker_finish">确认</string>


    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <string name="timepicker_title_default">设置</string>
    <string name="aggrement_one">1、兵兵驿站科技网站相关业务由深圳兵兵驿站科技有限公司拥有及营运，本网站将完全按照以下发布的服务条款和操作规则严格执行，
        用户必须完全同意所有服务条款，才能注册成为丰巢的正式会员.\n\n\t\t
        用户在进行注册过程中点击"同意协议并进入下一步"即表示用户已完全知悉并接受全部服务条款。
兵兵驿站科技有权根据业务需要酌情修订"条款"，并在其网站上予以公告。如用户不同意相关修订，
        请用户立即停止使用"服务"。经修订的"条款"一经在兵兵驿站科技网站公布，即产生效力。如用户继续使用"服务"，则将视为用户已接受经修订的"条款"，当用户与兵兵驿站科技发生争议时，应以最新的"条款"为准。</string>

    <string name="aggrement_two">1、非会员指未完成注册，但通过上网设备（包括但不限于电脑、手机、平板电脑等）访问兵兵驿站科技网站并使用有限服务的用户。如已注册成为会员，但在使用服务时未履行登录手续，其行为会被视为非会员行为。\n
2、兵兵驿站科技允许非会员使用有限的服务，具体服务包括查询快件服务等。\n

3、非会员用户可通过手机验证并设置密码等会员注册方式成为会员。</string>

    <string name="no_trans">禁寄物品：各种枪支弹药、易燃易爆、化学危险品、毒品、各类生化制品、传染性感染性物质、各类非法伪造、侵权物品...</string>
    <string name="quest">本服务保修期90天，订单服务完成后90天内出现的故障 请安排先联系商家返修，如遇,问题可致电客服我们将,安 费上门返修至成功解</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save">保存</string>
    <string name="delete_photo">删除照片</string>
    <string name="tail_number">单号尾号</string>
    <string name="input_express_code">请输入快递单号</string>
    <string name="input_addressee_phone">请输入收件人手机号</string>
    <string name="phone_format_error">手机号格式不正确</string>
    <string name="express_code_regular">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
</resources>
