<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_module"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shap_white_bg_r10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--报错提示-->
        <TextView
            android:id="@+id/tv_fail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="24dp"
            android:text="请录入快递信息"
            android:textColor="@color/color_text_primary"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_tracking_company_key"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <!--快递公司-->
        <TextView
            android:id="@+id/tv_tracking_company_key"
            style="@style/Style_tv_dark_small"
            android:layout_marginBottom="15dp"
            android:text="快递公司"
            app:layout_constraintBottom_toTopOf="@id/tv_tracking_number_key"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_tracking_company_value"
            android:text=""
            android:hint="请选择快递公司"
            android:gravity="left|center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tracking_company_key"
            app:layout_constraintLeft_toRightOf="@+id/barrier"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_tracking_company_key"
            style="@style/Style_et_gray_small" />


        <!--快递单号-->
        <TextView
            android:id="@+id/tv_tracking_number_key"
            android:layout_marginBottom="15dp"
            style="@style/Style_tv_dark_small"
            android:text="快递单号"
            app:layout_constraintBottom_toTopOf="@id/tv_phone_key"
            app:layout_constraintLeft_toLeftOf="parent" />


        <EditText
            android:id="@+id/et_tracking_number_value"
            android:text=""
            android:hint="@string/input_express_code"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="textVisiblePassword"
            android:digits="@string/express_code_regular"
            style="@style/Style_et_gray_small"
            android:layout_height="@dimen/item_height_littler"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tracking_number_key"
            app:layout_constraintLeft_toRightOf="@+id/barrier"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_tracking_number_key"
            />
        <!--手机号-->
        <TextView
            android:id="@+id/tv_phone_key"
            style="@style/Style_tv_dark_small"
            android:layout_marginBottom="14dp"
            android:text="手机号"
            app:layout_constraintBottom_toTopOf="@id/tv_tips"
            app:layout_constraintLeft_toLeftOf="parent" />


        <EditText
            android:id="@+id/et_phone_value"
            android:text=""
            android:hint="@string/input_addressee_phone"
            android:textColorHint="@color/color_text_hint"
            android:inputType="number"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:imeActionLabel="@string/save"
            style="@style/Style_et_gray_small"
            android:layout_height="@dimen/item_height_littler"
            app:layout_constraintBottom_toBottomOf="@+id/tv_phone_key"
            app:layout_constraintLeft_toRightOf="@+id/barrier"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_phone_key"
            />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="tv_phone_key,tv_tracking_number_key"

            />

        <!--录入后，依然需要拍照面单，留下凭证-->
        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="录入后，依然需要拍照面单，留下凭证"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/color_text_fail"
            app:layout_constraintBottom_toTopOf="@id/btn_ok"
            app:layout_constraintLeft_toLeftOf="@id/btn_cancel"
            />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Style_btn_main_leary"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height_littler"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="10dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/btn_ok"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/Style_btn_main_solid"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height_littler"
            android:layout_marginStart="10dp"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="18dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

